# imx

./: README.md  pyproject.toml
docs/: Design.md
skills/imx-cli/: SKILL.md
skills/imx-cli/references/: commands.md
skills/imx-cli/scripts/: run_imx.sh
src/imx/: __init__.py  main.py
src/imx/core/: __init__.py  blend.py  color.py  video.py
src/imx/utils/: __init__.py  files.py  image_ops.py
tests/: test_blend.py  test_colorize.py  test_smoke.py
